# models_robots_rycsv_py

./: CMakeLists.txt  README.md  package.xml
launch/: solution_exer_problem.launch  solution_test_problem.launch
scripts/: model_rbt_1.py  model_rbt_2.py  vel_pub_rbt_1.py  vel_pub_rbt_2.py
